Prevent wrap on project summary table headers

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -474,6 +474,7 @@ footer a {
   position: relative;
 
   table { width: inherit; }
+  th { white-space: nowrap; }
 }
 
 .project-map + .project-summary {
